--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "type-system-structure",
   "version": "0.1.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
